🐛 [Fix] : Lnb z-index 수정 - Lnb z-index 수정
Github issue #218

--- a/src/components/Solutions/Solutions.module.css
+++ b/src/components/Solutions/Solutions.module.css
@@ -1,5 +1,5 @@
 .Lnb {
-  @apply flex justify-center mt-open-2xl desktop:sticky desktop:top-[80px] desktop:z-[999];
+  @apply flex justify-center mt-open-2xl desktop:sticky desktop:top-[80px] desktop:z-[9];
 
   & .list {
     @apply max-w-[1320px] flex flex-wrap gap-mobile-gap justify-between -bg--open-gray-50 rounded-[20px] w-full;
